[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcclass-messaging-sdk"
version = "0.1.0"
description = "TCClass Messaging SDK - A Python SDK for messaging services"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "TCClass", email = "dev@tcclass.com"},
]
keywords = ["messaging", "sdk", "api", "tcclass"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "websockets>=12.0",
    "aiortc>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/hycxkj/tcclass-messaging-sdk"
Documentation = ""
Repository = "https://github.com/hycxkj/tcclass-messaging-sdk"
Issues = "https://github.com/hycxkj/tcclass-messaging-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tcclass_messaging_sdk"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=tcclass_messaging_sdk --cov-report=term-missing"
